<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_text"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/nav_string_text" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/nav_string_image" />
        <item
            android:id="@+id/nav_collection_text"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/nav_string_collection_text" />
        <item
            android:id="@+id/nav_collection_image"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/nav_string_collection_image" />
    </group>

    <item android:title="@string/nav_string_other">
        <menu>
            <item
                android:id="@+id/nav_data_export"
                android:icon="@drawable/ic_menu_data_export"
                android:title="@string/nav_string_data_export" />
            <item
                android:id="@+id/nav_data_import"
                android:icon="@drawable/ic_menu_data_import"
                android:title="@string/nav_string_data_import" />
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/nav_string_share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/nav_string_feedback" />
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_menu_about"
                android:title="@string/nav_string_about" />
        </menu>
    </item>

</menu>
